--- a/todo-piranha-form/development.ini
+++ b/todo-piranha-form/development.ini
@@ -14,6 +14,8 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
     pyramid_tm
+    deform_bootstrap
+    pyramid_jinja2
 
 sqlalchemy.url = sqlite:///%(here)s/todo-piranha-form.sqlite
 
