--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: python
 
 python:
-  - 2.7
-  - 3.4
-  - pypy
+    - "2.7"
+    - "3.3"
+    - "3.4"
+# env:
+#     - PYRAMID_VER="==1.5.6" SQLALCHEMY_VER="==1.0.2"
 
 install: python todo-piranha-form/setup.py install
 
